# test_readthedocs

./: .readthedocs.yaml  pyproject.toml
docs/source/: conf.py  index.rst  usage.rst
src/: lumache.py
