[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lumache"
version = "0.1.0"
description = "test repo for read the docs and poetry"
authors = ["Samuel Gauthier <samuel.gauthier@zuehlke.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autoapi = "^3.0.0"
tomli = "^2.0.1"
furo = "^2023.9.10"

